--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ itertools = "0.10.5"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 range-set-blaze = "0.1.2"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
